# Taihe

./: .clang-format  .gitignore  .gn  BUILD.gn  CMakeLists.txt  README.md  build  call_cmake.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: check.yml  test.yml
analysis/: data.txt  plot.py
app-flutter/ohos/AppScope/: app.json5
app-flutter/ohos/sig/: default_ohos_Q9rcmgwD9CpP5EMNrp4GtnUsSMMz_fGTDKHN56yLryw=.cer  default_ohos_Q9rcmgwD9CpP5EMNrp4GtnUsSMMz_fGTDKHN56yLryw=.csr  default_ohos_Q9rcmgwD9CpP5EMNrp4GtnUsSMMz_fGTDKHN56yLryw=.p12
app-native/: c-to-c.cc  js-to-napi.js
app-native/dart-to-c/: pubspec.yaml
app-native/dart-to-c/lib/: wrapper.dart  wrapper_taihe.dart
app-native/dart-to-c/test/: dart_to_c_test.dart
app-ohos/lib/: main.dart
app-ohos/ohos/: build-profile.json5
app-ohos/ohos/entry/: build-profile.json5
app-ohos/ohos/sig/: default_ohos_Q9rcmgwD9CpP5EMNrp4GtnUsSMMz_fGTDKHN56yLryw=.p7b
cmake/: TaiheUtils.cmake  TaiheWorkflows.cmake
compiler/: Taihe.g4  pyproject.toml  run-kn-ohos  run-kn-test  run-taihe.py  run-test  run.py
compiler/taihe/: code_generation.py  driver.py  exceptions.py  semantic_analysis.py
compiler/taihe/cli/: compiler.py  tryit.py
compiler/taihe/codegen/: abi_generator.py  ani_generator.py  cpp_proj_generator.py  generator.py  kn_bridge_generator.py  kn_bridge_generator_new.py  mangle.py  (+1 more)
compiler/tests/: .coverage  .coveragerc  test_compiler  test_compiler.py  test_semantic_error.py
cookbook/arraybuffer/: CMakeLists.txt
cookbook/async/: CMakeLists.txt
cookbook/basic_abilities/: CMakeLists.txt
cookbook/bigint/: CMakeLists.txt
cookbook/binding/: CMakeLists.txt
cookbook/callback/: CMakeLists.txt
cookbook/callback_compare/: CMakeLists.txt
cookbook/class_extend/: CMakeLists.txt
cookbook/enum_union/: CMakeLists.txt
cookbook/essential/: README.md
cookbook/export_default/: CMakeLists.txt
cookbook/external_obj/: CMakeLists.txt  readme.md
cookbook/external_obj_extend/: CMakeLists.txt
cookbook/hello_ani/: CMakeLists.txt
cookbook/hello_world/: CMakeLists.txt
cookbook/import/: CMakeLists.txt
cookbook/inherit/: CMakeLists.txt
cookbook/inheritance/: CMakeLists.txt
cookbook/interface/: CMakeLists.txt
cookbook/namespace/: CMakeLists.txt
cookbook/new_overload/: CMakeLists.txt
cookbook/null_undefined/: CMakeLists.txt
cookbook/on_off/: CMakeLists.txt
cookbook/optional/: CMakeLists.txt
cookbook/override/: CMakeLists.txt
cookbook/polymorphism/: CMakeLists.txt
cookbook/reversed/: CMakeLists.txt
cookbook/struct_extends/: CMakeLists.txt
cookbook/typedarray/: CMakeLists.txt
cookbook/union_embed/: CMakeLists.txt
cookbook/unwrap_obj/: CMakeLists.txt
docs/: BuildWithGn.org  CJGeneratedCode.md  CppUsageGuide.md  DSL.org  QuickStart.md  README.org  TaiheBridgeKn.md  UserDoc.md
example/test_cj_04/: test.cj
lib/: c_api.cc  c_api.h  dart_api.cc  impl.cc  impl.h  node_api.cc  taihe_rt.cc  taihe_rt.h
runtime/: BUILD.gn  CMakeLists.txt
runtime/src/: callback.c  object.c  runtime.cpp  string.c  string.cpp
scripts/: build  check  taihec  test
test/: CMakeLists.txt
test/ani_array/: CMakeLists.txt
test/ani_arraybuffer/: CMakeLists.txt
test/ani_async/: CMakeLists.txt
test/ani_basetype/: CMakeLists.txt
test/ani_bigint/: CMakeLists.txt
test/ani_bundle/: CMakeLists.txt
test/ani_bundlemanager/: CMakeLists.txt
test/ani_callback/: CMakeLists.txt
test/ani_compare/: CMakeLists.txt
test/ani_enum/: CMakeLists.txt
test/ani_export_default/: CMakeLists.txt
test/ani_finalization/: CMakeLists.txt
test/ani_fixedarray/: CMakeLists.txt
test/ani_function/: CMakeLists.txt
test/ani_graphics3d/: CMakeLists.txt
test/ani_huks/: CMakeLists.txt
test/ani_iface/: CMakeLists.txt
test/ani_import/: CMakeLists.txt
test/ani_inject/: CMakeLists.txt
test/ani_keep_name/: CMakeLists.txt
test/ani_map/: CMakeLists.txt
test/ani_maythrow/: CMakeLists.txt
test/ani_namespace/: CMakeLists.txt
test/ani_on_off/: CMakeLists.txt
test/ani_opaque/: CMakeLists.txt
test/ani_optional/: CMakeLists.txt
test/ani_overload/: CMakeLists.txt
test/ani_polymorphism/: CMakeLists.txt
test/ani_primitives/: CMakeLists.txt
test/ani_record/: CMakeLists.txt
test/ani_session/: CMakeLists.txt
test/ani_static/: CMakeLists.txt
test/ani_string/: CMakeLists.txt
test/ani_struct/: CMakeLists.txt
test/ani_struct_extend/: CMakeLists.txt
test/ani_test/: CMakeLists.txt
test/ani_thread/: CMakeLists.txt
test/ani_tp_cookies/: CMakeLists.txt
test/ani_tp_ui/: CMakeLists.txt
test/ani_typedarray/: CMakeLists.txt
test/ani_union/: CMakeLists.txt
test/cj_callback/: testCallBack.cj
test/cmake_test/: CMakeLists.txt
test/compile_ani_lib/: CMakeLists.txt
test/compile_cpp_lib/: CMakeLists.txt
test/integer/: BUILD.gn
test/integer/author/: BUILD.gn
test/integer/author/include/: integer.arithmetic.impl.h  integer.arithmetic.impl.hpp  integer.io.impl.h
test/integer/author/src/: integer.arithmetic.impl.cpp  integer.io.impl.cpp
test/integer/user/: BUILD.gn
test/integer/user/src/: integer.arithmetic.napi.cpp
test/napi/: integer.d.ts  napi.ts
test/rgb/: CMakeLists.txt
test/rgb/author/src/: rgb.base.impl.c  rgb_impl.cpp
test/rgb/idl/: rgb.show.taihe
test/rgb/user/src/: main.cpp
(+392 files in other folders)
