import("//build/compiler/taihe_compiler.gni")

taihe_compiler("integer_test_author") {
  idl_sources = [
    "//test/integer/idl/integer.arithmetic.taihe",
    "//test/integer/idl/integer.io.taihe"
  ]
  output_dir = "//test/integer/author/include"
  mode = "author"
}


shared_library("author") {
  sources = [ 
    "./src/integer.arithmetic.impl.c",
    "./src/integer.arithmetic.impl.cpp",
    "./src/integer.io.impl.cpp",
  ]
  deps = [
    ":integer_test_author",
  ]
  include_dirs = [
    "./include",
    "//runtime/include"
  ]
  lib_dirs = [ "/root/TaiheCompiler/out/runtime" ]
  libs = ["taihe-rt"]
  ldflags = ["-Wl,-rpath=/root/TaiheCompiler/out/runtime"]
}